--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".daggerdemo.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -24,6 +24,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".TestLeakCarnaryActivity"/>
+        <activity android:name=".daggerdemo2.DaggerDemo2Activity"/>
     </application>
 
 </manifest>
