--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    dataBinding {
+        enabled = true
+    }
 }
 
 dependencies {
@@ -25,5 +29,9 @@ dependencies {
 
     api 'com.google.dagger:dagger:2.14.1'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.14.1'
+
+    implementation 'com.squareup.leakcanary:leakcanary-android:1.6.1'
+    // Optional, if you use support library fragments:
+    implementation 'com.squareup.leakcanary:leakcanary-support-fragment:1.6.1'
 
 }
