--- a/lib_base/build.gradle
+++ b/lib_base/build.gradle
@@ -15,7 +15,7 @@ dependencies {
     api "com.android.support:recyclerview-v7:$supportLibraryVersion"
 
     //api 'com.squareup.leakcanary:leakcanary-android:2.0-beta-2'
-    api 'com.squareup.leakcanary:leakcanary-android:1.5'
+    //api 'com.squareup.leakcanary:leakcanary-android:1.5'
 
     // 处理mainthread/iothread 切换
     api 'io.reactivex.rxjava2:rxjava:2.0.1'
