--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.4.1'
-        
+        classpath 'org.greenrobot:greendao-gradle-plugin:3.2.2' // add plugin
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -47,7 +47,7 @@ ext {
     versionCode = 1
     versionName = "1.0.0"
     supportLibraryVersion = '27.1.1'
-
+    dbflowVersion = "4.0.0-beta7"
 
 
     applicationId = "com.bingley.androidimprove"
