--- a/lib_base/build.gradle
+++ b/lib_base/build.gradle
@@ -13,6 +13,7 @@ dependencies {
 
     api "com.android.support:design:$supportLibraryVersion"
     api "com.android.support:recyclerview-v7:$supportLibraryVersion"
+    api 'com.android.support.constraint:constraint-layout:1.1.3'
 
     //api 'com.squareup.leakcanary:leakcanary-android:2.0-beta-2'
     //api 'com.squareup.leakcanary:leakcanary-android:1.5'
