--- a/DbApplicaion/build.gradle
+++ b/DbApplicaion/build.gradle
@@ -51,7 +51,7 @@ dependencies {
     // room
     implementation "android.arch.persistence.room:runtime:$room_version"
     annotationProcessor "android.arch.persistence.room:compiler:$room_version" // use kapt for Kotlin
-
+    // 查看数据库
     debugImplementation 'com.amitshekhar.android:debug-db:1.0.6'
     implementation 'com.kongzue.dialog_v3:dialog:3.1.1'
 
